--- a/docker-compose.mlflow.yaml
+++ b/docker-compose.mlflow.yaml
@@ -4,10 +4,14 @@ services:
     command: >
       mlflow server
       --backend-store-uri /mlflow/mlruns
-      --default-artifact-root /mlflow/mlruns
+      --artifacts-destination /mlflow/artifacts
+      --serve-artifacts
       --host 0.0.0.0
       --port 5000
     ports:
       - "5000:5000"
     volumes:
       - ./mlruns:/mlflow/mlruns
+      - ./artifacts:/mlflow/artifacts
+    environment:
+      - MLFLOW_TRACKING_URI=http://mlflow:5000
