--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,6 +34,7 @@ services:
       --serve-artifacts
       --host 0.0.0.0
       --port 5000
+      --workers 1
     ports:
       - "5000:5000"
     volumes:
