--- a/monitoring/grafana/provisioning/dashboards/dashboard.yaml
+++ b/monitoring/grafana/provisioning/dashboards/dashboard.yaml
@@ -1,7 +1,7 @@
 apiVersion: 1
 
 providers:
-  - name: "Model Monitoring Dashboard"
+  - name: "Evidently Monitoring Dashboard"
     folder: ""
     type: file
     disableDeletion: false
