--- a/api/Dockerfile.api
+++ b/api/Dockerfile.api
@@ -12,4 +12,4 @@ RUN pip install --no-cache-dir --upgrade pip && \
 
 EXPOSE 5050
 
-CMD ["gunicorn", "--bind", "0.0.0.0:5050", "server:app"]
+CMD ["gunicorn", "--bind", "0.0.0.0:5050", "--timeout", "180", "--workers", "2", "server:app"]
