prometheus alert rules

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -118,9 +118,11 @@ services:
     restart: always
     volumes:
       - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./monitoring/alert_rules:/etc/prometheus/alert_rules
       - prometheus_data:/prometheus
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--web.enable-lifecycle"
     ports:
       - "9091:9090"
     depends_on:
