--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -1,6 +1,9 @@
 global:
   scrape_interval: 10s
 
+rule_files:
+  - "/etc/prometheus/alert_rules/*.yml"
+
 scrape_configs:
   - job_name: "monitoring"
     metrics_path: /metrics
