--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,18 @@
-[pytest]
+[tool:pytest]
 testpaths = tests
 python_files = test_*.py
-addopts = -v --maxfail=3 --disable-warnings
+python_classes = Test*
+python_functions = test_*
+addopts = 
+    -v
+    --tb=short
+    --strict-markers
+    --disable-warnings
+    --cov=api
+    --cov-report=term-missing
+    --cov-report=html:htmlcov
+    --cov-fail-under=80
+markers =
+    unit: Unit tests
+    integration: Integration tests
+    slow: Slow tests that may take longer to run
