--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,75 @@
-[tool.pylint.messages_control]
-
-disable = [
-    "missing-function-docstring",
-    "missing-final-newline",
-    "missing-class-docstring",
-    "missing-module-docstring",
-    "invalid-name",
-    "too-few-public-methods"
-]
-
 [tool.black]
 line-length = 88
-target-version = ['py39']
+target-version = ['py38', 'py39', 'py310']
 skip-string-normalization = true
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+  | htmlcov
+)/
+'''
 
 [tool.isort]
+profile = "black"
 multi_line_output = 3
+line_length = 88
 length_sort = true
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
+known_first_party = ["api", "classifier", "monitoring"]
+skip = [
+    ".eggs",
+    ".git",
+    ".mypy_cache",
+    ".tox",
+    ".venv",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "htmlcov"
+]
+
+[tool.pylint.messages_control]
+disable = [
+    "missing-module-docstring",
+    "missing-class-docstring",
+    "missing-function-docstring",
+    "missing-final-newline",
+    "too-few-public-methods",
+    "too-many-arguments",
+    "too-many-locals",
+    "too-many-instance-attributes",
+    "line-too-long",  # Handled by black
+    "invalid-name",
+    "unused-argument",
+    "import-error",  # Can be problematic in test environments
+    "no-member",     # Can be problematic with mocks
+]
+
+[tool.pylint.format]
+max-line-length = 88
+
+[tool.pylint.design]
+max-args = 8
+max-locals = 20
+max-branches = 15
+max-statements = 60
+
+[tool.pylint.similarities]
+min-similarity-lines = 6
+ignore-comments = true
+ignore-docstrings = true
